pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedProperty8.pkl
class Person {
  name: String
}

output {
  value = new Person {}
}
